# lichess-stockfish

./: .env.skel  Cargo.toml
migrations/2024-08-16-103652_message_table/: down.sql  up.sql
src/: main.rs  schema.rs
src/board/: mod.rs
src/database/: databse.rs
src/models/: error.rs  message.rs
