[package]
name = "lichess-stockfish"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.5"
tokio = { version = "1", features = ["full"] }
tl = { version = "*" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
image = "0.25.2"
serenity = "0.12"
dotenv = "*"
uuid = { version = "*", features = ["v4"] }
diesel = { version = "*", features = ["mysql", "chrono"] }
diesel_migrations = "*"
chrono = "*"